# canic

./: .gitignore  .gitleaksignore  ACCESS_ARCHITECTURE.md  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  INSTALLING.md  INTEGRATION.md  LICENSE  Makefile  README.md  RELEASE_GUIDE.md  TEMP.md  TESTING.md  VERSIONING.md  audit.md  clippy.toml  dfx.json  icp.yaml  llms.txt  package-lock.json  setup-versioning.sh  tool-versions.env
canisters/reference-support/: Cargo.toml  README.md
canisters/reference-support/src/: canister.rs
canisters/root/: Cargo.toml  root.did
canisters/root/src/: lib.rs
crates/canic/: Cargo.toml  README.md  build.rs
crates/canic-backup/: Cargo.toml  README.md
crates/canic-backup/src/: hash.rs  lib.rs  registry.rs  serialization.rs  test_support.rs
crates/canic-cdk/: Cargo.toml  README.md  build.rs
crates/canic-cdk/src/: lib.rs  serialize.rs  storable.rs
crates/canic-cdk/tests/: value_helpers.rs
crates/canic-cli/: Cargo.toml  README.md
crates/canic-cli/src/: auth.rs  build.rs  endpoints.rs  evidence.rs  evidence_support.rs  info.rs  info_env.rs  lib.rs  main.rs  path_stamp.rs  registry_tree.rs  replica.rs  response_parse.rs  status.rs  test_support.rs  tests.rs  token.rs
crates/canic-control-plane/: Cargo.toml  README.md  build.rs
crates/canic-control-plane/src/: config.rs  lib.rs  schema.rs  state_contract.rs  support.rs
crates/canic-core/: Cargo.toml  README.md  build.rs
crates/canic-core/benches/: serialize.rs
crates/canic-core/src/: __control_plane_core.rs  __sharding_core.rs  auth.rs  bootstrap.rs  control_plane_support.rs  dispatch.rs  error.rs  guard.rs  lib.rs  log.rs  memory_macros.rs  perf.rs  protocol.rs  replay_policy.rs  shared_support.rs  state_contract.rs
crates/canic-core/tests/: candid_serde_boundary_guard.rs  cost_guard_boundary_guard.rs  delegated_auth_hard_cut_guard.rs  lifecycle_boundary_guard.rs  ops.rs  passive_dto_boundary_guard.rs  pic_delegation_provision.rs  pic_intent_race.rs  pic_role_attestation.rs  pic_sharding_bootstrap.rs  policy_purity_boundary_guard.rs  protected_internal_call_guard.rs  receipt_reclamation_inventory_guard.rs  stable_memory_abi_guard.rs  timer_inventory_guard.rs  trap_guard.rs  workflow_prelude_boundary_guard.rs
crates/canic-dsl/: Cargo.toml  README.md
crates/canic-dsl-macros/: Cargo.toml  README.md
crates/canic-dsl-macros/src/: lib.rs
crates/canic-dsl/src/: lib.rs
crates/canic-host/: Cargo.toml  README.md
crates/canic-host/examples/: build_artifact.rs
crates/canic-host/src/: adoption.rs  artifact_io.rs  bootstrap_store.rs  build_profile.rs  build_provenance.rs  canister_build.rs  cargo_metadata.rs  deployment_catalog.rs  dfx.rs  entropy.rs  evidence_envelope.rs  icp.rs  icp_config.rs  installed_deployment.rs  installed_fleet.rs  lib.rs  nns_render.rs  policy_gate.rs  registry.rs  replica_query.rs  response_parse.rs  table.rs  test_support.rs
crates/canic-ic-registry/: Cargo.toml  README.md
crates/canic-ic-registry/src/: lib.rs
crates/canic-installer/: Cargo.toml  README.md
crates/canic-installer/src/: bootstrap_store.rs  canister_build.rs  install_root.rs  lib.rs  release_set.rs
crates/canic-internal/: Cargo.toml  README.md
crates/canic-internal/src/: canister.rs  lib.rs  release_set.rs
crates/canic-internal/tests/: root_hierarchy.rs
crates/canic-macros/: Cargo.toml  README.md
crates/canic-macros/src/: lib.rs  perf.rs  storable.rs
crates/canic-memory/: Cargo.toml  README.md
crates/canic-memory/src/: ledger.rs  lib.rs  manager.rs  ops.rs  policy.rs  registry.rs  runtime.rs  serialize.rs
crates/canic-sharding-runtime/: Cargo.toml  README.md
crates/canic-sharding-runtime/src/: lib.rs
crates/canic-subnet-catalog/: Cargo.toml  README.md
crates/canic-subnet-catalog/src/: lib.rs  tests.rs
crates/canic-template-runtime/: Cargo.toml  README.md
crates/canic-template-runtime/src/: lib.rs
crates/canic-template-types/: Cargo.toml  README.md
crates/canic-template-types/src/: lib.rs
crates/canic-test/: Cargo.toml
crates/canic-testing-internal/: Cargo.toml  README.md
crates/canic-testing-internal/src/: canister.rs  lib.rs
crates/canic-testing-internal/tests/: fixture_payloads.rs
crates/canic-testkit/: Cargo.toml  README.md
crates/canic-testkit/src/: lib.rs  pic.rs
crates/canic-testkit/tests/: artifact_helpers.rs
crates/canic-tests/: Cargo.toml
crates/canic-tests/src/: lib.rs
crates/canic-tests/tests/: delegation_flow.rs  ic_memory_policy_adapter.rs  instruction_audit.rs  lifecycle_boundary.rs  pic_blob_storage.rs  pic_directory_bootstrap.rs  pic_ingress_payload_limits.rs  pic_intent_race.rs  pic_receipt_backed_intent.rs  pic_role_attestation.rs  pic_sharding_bootstrap.rs  root_hierarchy.rs  root_replay.rs  root_suite.rs  root_wasm_store_reconcile.rs  standalone_canisters.rs  timer_authority.rs
crates/canic-types/: Cargo.toml  README.md
crates/canic-types/src/: cycles.rs  decimal.rs  lib.rs  page.rs  string.rs  wasm.rs
crates/canic-utils/: Cargo.toml  README.md
crates/canic-utils/src/: format.rs  hash.rs  instructions.rs  lib.rs  perf.rs  rand.rs  serialize.rs  time.rs  wasm.rs
crates/canic-wasm-store/: Cargo.toml  README.md  build.rs  canic.toml  wasm_store.did
crates/canic-wasm-store/src/: lib.rs
crates/canic/examples/: auth_rules.rs  minimal_root.rs  ops_create_canister.rs  shard_lifecycle.rs
crates/canic/src/: auth.rs  canister.rs  guard.rs  lib.rs  log.rs  macros.rs  protocol.rs  runtime.rs  serialize.rs
crates/canic/tests/: blob_storage_endpoint_macro.rs  call_facade.rs  canic_metadata.rs  changelog_governance.rs  config_guide.rs  control_plane_facade.rs  delegation_flow.rs  endpoint_macro.rs  icp_refill_endpoint_macro.rs  install_script_surface.rs  instruction_audit.rs  internal_client_macro.rs  lifecycle_boundary.rs  managed_endpoint_gate.rs  metrics_facade.rs  ops.rs  protected_endpoint_macro.rs  protocol_inventory_gate.rs  protocol_surface.rs  reference_surface.rs  root_replay.rs  (+5 more)
crates/canic_internal/: Cargo.toml
crates/canic_test/: Cargo.toml
(+6140 files in other folders)
