
[workspace]
members = [
    "crates/canic",
    "crates/canic-cdk",
    "crates/canic-core",
    "crates/canic-core/test-canisters/delegation_root_stub",
    "crates/canic-core/test-canisters/delegation_signer_stub",
    "crates/canic-core/test-canisters/intent_authority",
    "crates/canic-core/test-canisters/intent_client",
    "crates/canic-core/test-canisters/intent_external",
    "crates/canic-core/test-canisters/sharding_root_stub",
    "crates/canic-dsl",
    "crates/canic-dsl-macros",
    "crates/canic-internal",
    "crates/canic-memory",
    "crates/canic-testkit",
    "crates/canic-utils",
    "crates/canisters/app",
    "crates/canisters/blank",
    "crates/canisters/root",
    "crates/canisters/scale",
    "crates/canisters/scale_hub",
    "crates/canisters/shard",
    "crates/canisters/shard_hub",
    "crates/canisters/test",
    "crates/canisters/user_hub",
    "crates/canisters/user_shard",
]
resolver = "2"

[workspace.package]
rust-version = "1.92.0"
edition = "2024"
version = "0.9.27"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "Canic — a canister orchestration and management toolkit for the Internet Computer"
repository = "https://github.com/dragginzgame/canic"
homepage = "https://github.com/dragginzgame/canic"
keywords = ["internet-computer", "canister", "dfinity", "icp", "management"]
categories = ["wasm"]
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1"
base32 = "0.5"
candid = { version = "0.10", default-features = false }
canic = { version = "0.9.27", path = "crates/canic" }
canic-cdk = { version = "0.9.27", path = "crates/canic-cdk" }
canic-core = { version = "0.9.27", path = "crates/canic-core" }
canic-dsl = { version = "0.9.27", path = "crates/canic-dsl" }
canic-dsl-macros = { version = "0.9.27", path = "crates/canic-dsl-macros" }
canic-internal = { version = "0.9.27", path = "crates/canic-internal" }
canic-memory = { version = "0.9.27", path = "crates/canic-memory" }
canic-testkit = { version = "0.9.27", path = "crates/canic-testkit" }
canic-utils = { version = "0.9.27", path = "crates/canic-utils" }
convert_case = "0.11"
crc32fast = "1.5"
criterion = "0.8"
ctor = "0.6"
derive_more = { version = "2.0", default-features = false, features = ["full"] }
futures = "0.3"
hex = "0.4"
ic-canister-sig-creation = "1.3.1"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0"
ic-certification = { version = "3.0.3", features = ["serde"] }
ic-certified-map = "0.4"
ic-management-canister-types = "0.3.3"
ic-signature-verification = "0.2"
ic-stable-structures = "0.7.2"
icrc-ledger-types = "0.1.12"
num-traits = "0.2"
pocket-ic = "12.0"
proc-macro2 = "1.0"
quote = "1.0"
rand_chacha = "0.10"
remain = "0.2"
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
syn = "2.0"
thiserror = "2.0"
toml = "0.9"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }

# shared clippy rules
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# always warn
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

# always allow
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
# --------------------------------------------------------------------
#   IMPORTANT: patch section MUST be at the top level (not nested)
# --------------------------------------------------------------------
[patch.crates-io]
canic = { path = "crates/canic" }
canic-cdk = { path = "crates/canic-cdk" }
canic-core = { path = "crates/canic-core" }
canic-dsl = { path = "crates/canic-dsl" }
canic-dsl-macros = { path = "crates/canic-dsl-macros" }
canic-memory = { path = "crates/canic-memory" }
canic-testkit = { path = "crates/canic-testkit" }
canic-utils = { path = "crates/canic-utils" }

# profiles
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "none"
debug = true
overflow-checks = true
