
[workspace]
members = [
    "canisters/app",
    "canisters/minimal",
    "canisters/reference-support",
    "canisters/root",
    "canisters/scale",
    "canisters/scale_hub",
    "canisters/user_hub",
    "canisters/user_shard",
    "crates/canic",
    "crates/canic-cdk",
    "crates/canic-control-plane",
    "crates/canic-core",
    "crates/canic-core/audit-canisters/audit_leaf_probe",
    "crates/canic-core/audit-canisters/audit_root_probe",
    "crates/canic-core/audit-canisters/audit_scaling_probe",
    "crates/canic-core/test-canisters/canister_test",
    "crates/canic-core/test-canisters/delegation_root_stub",
    "crates/canic-core/test-canisters/delegation_signer_stub",
    "crates/canic-core/test-canisters/intent_authority",
    "crates/canic-core/test-canisters/intent_client",
    "crates/canic-core/test-canisters/intent_external",
    "crates/canic-core/test-canisters/project_hub_stub",
    "crates/canic-core/test-canisters/project_instance_stub",
    "crates/canic-core/test-canisters/sharding_root_stub",
    "crates/canic-dsl-macros",
    "crates/canic-installer",
    "crates/canic-memory",
    "crates/canic-testing-internal",
    "crates/canic-testkit",
    "crates/canic-tests",
    "crates/canic-wasm-store",
]
resolver = "2"

[workspace.package]
rust-version = "1.91.0"
edition = "2024"
version = "0.27.14"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "Canic — a canister orchestration and management toolkit for the Internet Computer"
repository = "https://github.com/dragginzgame/canic"
homepage = "https://github.com/dragginzgame/canic"
keywords = ["internet-computer", "canister", "dfinity", "icp", "management"]
categories = ["wasm"]
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1"
candid = { version = "0.10", default-features = false }
canic = { version = "0.27.14", path = "crates/canic" }
canic-cdk = { version = "0.27.14", path = "crates/canic-cdk" }
canic-control-plane = { version = "0.27.14", path = "crates/canic-control-plane" }
canic-core = { version = "0.27.14", path = "crates/canic-core" }
canic-dsl-macros = { version = "0.27.14", path = "crates/canic-dsl-macros" }
canic-installer = { version = "0.27.14", path = "crates/canic-installer" }
canic-internal = { version = "0.27.14", path = "canisters/reference-support" }
canic-memory = { version = "0.27.14", path = "crates/canic-memory" }
canic-testing-internal = { version = "0.27.14", path = "crates/canic-testing-internal" }
canic-testkit = { version = "0.27.14", path = "crates/canic-testkit" }
canic-wasm-store = { version = "0.27.14", path = "crates/canic-wasm-store" }
criterion = "0.8"
ctor = "0.8"
flate2 = { version = "1.1", default-features = false, features = [
    "rust_backend",
] }
futures = "0.3"
ic-cdk = "0.20.0"
ic-cdk-management-canister = "0.1.0"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7.2"
icrc-ledger-types = { version = "0.2", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
pocket-ic = "13.0"
proc-macro2 = "1.0"
quote = "1.0"
rand_chacha = "0.10"
remain = "0.2"
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
# Keep `sha2` pinned to the existing 0.10 line used by `k256` and the IC/runtime
# stack so canister builds do not pull in a second `sha2` version.
sha2 = "0.10.9"
syn = "2.0"
thiserror = "2.0"
toml = "1.0"

# shared clippy rules
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# always warn
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

# always allow
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
# --------------------------------------------------------------------
#   IMPORTANT: patch section MUST be at the top level (not nested)
# --------------------------------------------------------------------
[patch.crates-io]
canic = { path = "crates/canic" }
canic-cdk = { path = "crates/canic-cdk" }
canic-control-plane = { path = "crates/canic-control-plane" }
canic-core = { path = "crates/canic-core" }
canic-dsl-macros = { path = "crates/canic-dsl-macros" }
canic-installer = { path = "crates/canic-installer" }
canic-memory = { path = "crates/canic-memory" }
canic-testkit = { path = "crates/canic-testkit" }
canic-wasm-store = { path = "crates/canic-wasm-store" }

# profiles
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "none"
debug = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
overflow-checks = false
incremental = false

[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
