
[workspace]
members = [
    "canisters/audit/audit_leaf_probe",
    "canisters/audit/audit_root_probe",
    "canisters/audit/audit_scaling_probe",
    "canisters/demo/app",
    "canisters/demo/minimal",
    "canisters/demo/root",
    "canisters/demo/scale",
    "canisters/demo/scale_hub",
    "canisters/demo/user_hub",
    "canisters/demo/user_shard",
    "canisters/sandbox/minimal",
    "canisters/test/delegation_root_stub",
    "canisters/test/delegation_signer_stub",
    "canisters/test/intent_authority",
    "canisters/test/intent_client",
    "canisters/test/intent_external",
    "canisters/test/payload_limit_probe",
    "canisters/test/project_hub_stub",
    "canisters/test/project_instance_stub",
    "canisters/test/runtime_probe",
    "canisters/test/sharding_root_stub",
    "crates/canic",
    "crates/canic-backup",
    "crates/canic-cdk",
    "crates/canic-cli",
    "crates/canic-control-plane",
    "crates/canic-core",
    "crates/canic-installer",
    "crates/canic-macros",
    "crates/canic-memory",
    "crates/canic-testing-internal",
    "crates/canic-testkit",
    "crates/canic-tests",
    "crates/canic-wasm-store",
]
resolver = "2"

[workspace.package]
rust-version = "1.91.0"
edition = "2024"
version = "0.30.38"
license = "MIT"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "Canic — a canister orchestration and management toolkit for the Internet Computer"
repository = "https://github.com/dragginzgame/canic"
homepage = "https://github.com/dragginzgame/canic"
keywords = ["internet-computer", "canister", "dfinity", "icp", "management"]
categories = ["wasm"]
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1"
candid = { version = "0.10", default-features = false }
canic = { version = "0.30.38", path = "crates/canic" }
canic-backup = { version = "0.30.38", path = "crates/canic-backup" }
canic-cdk = { version = "0.30.38", path = "crates/canic-cdk" }
canic-cli = { version = "0.30.38", path = "crates/canic-cli" }
canic-control-plane = { version = "0.30.38", path = "crates/canic-control-plane" }
canic-core = { version = "0.30.38", path = "crates/canic-core" }
canic-installer = { version = "0.30.38", path = "crates/canic-installer" }
canic-macros = { version = "0.30.38", path = "crates/canic-macros" }
canic-memory = { version = "0.30.38", path = "crates/canic-memory" }
canic-testing-internal = { version = "0.30.38", path = "crates/canic-testing-internal" }
canic-testkit = { version = "0.30.38", path = "crates/canic-testkit" }
canic-wasm-store = { version = "0.30.38", path = "crates/canic-wasm-store" }
criterion = "0.8"
ctor = "1.0"
flate2 = { version = "1.1", default-features = false, features = [
    "rust_backend",
] }
futures = "0.3"
ic-cdk = "0.20.1"
ic-cdk-management-canister = "0.1.0"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7.2"
icrc-ledger-types = { version = "0.2", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
pocket-ic = "13.0"
proc-macro2 = "1.0"
quote = "1.0"
rand_chacha = "0.10"
remain = "0.2"
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
# Keep `sha2` pinned to the existing 0.10 line used by `k256` and the IC/runtime
# stack so canister builds do not pull in a second `sha2` version.
sha2 = "0.10.9"
syn = "2.0"
thiserror = "2.0"
toml = "1.0"

# shared clippy rules
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# always warn
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

# always allow
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
# --------------------------------------------------------------------
#   IMPORTANT: patch section MUST be at the top level (not nested)
# --------------------------------------------------------------------
[patch.crates-io]
canic = { path = "crates/canic" }
canic-backup = { path = "crates/canic-backup" }
canic-cdk = { path = "crates/canic-cdk" }
canic-cli = { path = "crates/canic-cli" }
canic-control-plane = { path = "crates/canic-control-plane" }
canic-core = { path = "crates/canic-core" }
canic-macros = { path = "crates/canic-macros" }
canic-installer = { path = "crates/canic-installer" }
canic-memory = { path = "crates/canic-memory" }
canic-testkit = { path = "crates/canic-testkit" }
canic-wasm-store = { path = "crates/canic-wasm-store" }

# profiles
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "none"
debug = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
overflow-checks = false
incremental = false

[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
