[package]
name = "canister_root"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canic = { workspace = true, features = ["control-plane", "auth-crypto"] }
canic-reference-support = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }

[build-dependencies]
canic = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }

[lints]
workspace = true
