[package]
name = "canic-cdk"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-cdk"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
base32 = { workspace = true }
candid = { workspace = true }
crc32fast = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-signature-verification = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
candid = { workspace = true }

[lints]
workspace = true
