[package]
name = "canic-cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Operator CLI for Canic fleet backup and restore workflows"
readme = "README.md"
documentation = "https://docs.rs/canic-cli"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[[bin]]
name = "canic"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
canic-backup = { workspace = true }
canic-core = { workspace = true }
canic-host = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
