[package]
name = "canic-control-plane"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-control-plane"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]
default = ["root-control-plane", "wasm-store-canister"]
root-control-plane = ["wasm-store-canister"]
wasm-store-canister = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
canic-core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
