[package]
name = "canic-core"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-core"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[features]
default = []
sharding = []
auth-root-canister-sig-create = ["dep:ic-canister-sig-creation", "dep:ic-certification"]
auth-root-canister-sig-verify = ["dep:ic-signature-verification"]
auth-issuer-canister-sig-create = ["dep:ic-canister-sig-creation", "dep:ic-certification"]
auth-issuer-canister-sig-verify = ["dep:ic-signature-verification"]
auth-threshold-ecdsa-sign = []
auth-delegated-token-verify = ["auth-root-canister-sig-verify", "auth-issuer-canister-sig-verify"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-canister-sig-creation = { workspace = true, optional = true }
ic-cdk = { workspace = true }
ic-cdk-management-canister = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-certification = { workspace = true, optional = true }
ic-memory = { workspace = true }
ic-signature-verification = { workspace = true, optional = true }
icrc-ledger-types = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
toml = { workspace = true }

[build-dependencies]
candid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }

[[bench]]
name = "serialize"
harness = false
test = false

[lints]
workspace = true
