[package]
name = "canic-host"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Host-side build, install, deployment, and fleet-template library for Canic workspaces"
readme = "README.md"
documentation = "https://docs.rs/canic-host"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
canic-control-plane = { workspace = true, features = ["root-control-plane"] }
canic-core = { workspace = true, features = ["auth-chain-key-ecdsa"] }
ciborium = { workspace = true }
flate2 = { workspace = true }
ic-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true, features = ["full", "visit"] }
thiserror = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[lints]
workspace = true
