[package]
name = "canic-ic-registry"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Live IC NNS registry adapter for Canic host tools"
readme = "README.md"
documentation = "https://docs.rs/canic-ic-registry"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic-subnet-catalog = { workspace = true }
ic-agent = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }

[lints]
workspace = true
