[package]
name = "canic-installer"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Published installer and release-set tooling for Canic downstream workspaces"
readme = "README.md"
documentation = "https://docs.rs/canic-installer"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[[bin]]
name = "canic-emit-root-release-set-manifest"
path = "src/bin/emit_root_release_set_manifest.rs"

[[bin]]
name = "canic-build-wasm-store-artifact"
path = "src/bin/build_wasm_store_artifact.rs"

[[bin]]
name = "canic-build-canister-artifact"
path = "src/bin/build_canister_artifact.rs"

[[bin]]
name = "canic-list-release-roles"
path = "src/bin/list_release_roles.rs"

[[bin]]
name = "canic-stage-root-release-set"
path = "src/bin/stage_root_release_set.rs"

[[bin]]
name = "canic-install-reference-topology"
path = "src/bin/install_reference_topology.rs"

[[bin]]
name = "canic-install-root"
path = "src/bin/install_root.rs"

[dependencies]
canic = { workspace = true }
canic-core = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
