[package]
name = "canic-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[dependencies]
canic = { workspace = true }

[dev-dependencies]
canic-testkit = { workspace = true }

[lints]
workspace = true
