[package]
name = "canic-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[dependencies]
canic-core = { workspace = true }

[lints]
workspace = true
