[package]
name = "canic-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = false
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[dependencies]
canic = { workspace = true }
canic-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
