[package]
name = "canic-macros"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-macros"
homepage = "https://github.com/dragginzgame/canic"
repository = "https://github.com/dragginzgame/canic"
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
canic-cdk = { workspace = true }
canic-utils = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
