[package]
name = "canic-memory"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-memory"
homepage = "https://github.com/dragginzgame/canic"
repository = "https://github.com/dragginzgame/canic"
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
canic-types = { workspace = true }
ctor = { workspace = true }
minicbor-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
