[package]
name = "canic-memory"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-memory"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
ctor = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
